@@ -6,6 +6,7 @@ CHANGELOG
 
 * Enabled django-mptt 0.9
 * Converted QueryDict to dict before manipulating in admin
+* Hide 'Save as new' button in file admin
 
 1.3.2 (2018-04-23)
 ------------------
